gl51-master/src/test/deca/context/invalid/testObject_rule3_40bisbis.deca
//Description
//instanceof avec int, error

//ceci est un test invalide
class A {}
{
    A a = new A();
    if(a instanceof int){}
}